fixed login wrapper & home slider

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -10,4 +10,13 @@
     }
   }
 }
+
+/*Drawer*/
+.ant-drawer {
+  .ant-drawer-content-wrapper {
+    @media (max-width: 500px) {
+      width: 100%;
+    }
+  }
+}
 /*End default Ant override*/
