--- a/client/src/frontend/scss/Header.scss
+++ b/client/src/frontend/scss/Header.scss
@@ -1,10 +1,10 @@
-.site-form-in-drawer-wrapper {
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
-  width: 100%;
-  padding: 10px 16px;
-  border-top: 1px solid #e9e9e9;
-  background: #fff;
-  text-align: right;
+.header {
+  padding: 15px 5%;
+  .header-container {
+    .logo {
+    }
+    .menu {
+      text-align: right;
+    }
+  }
 }
